# ctrlr

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE.md  README.md  install.sh
.github/workflows/: ci.yml  release.yml
src/: hash.rs  main.rs  state.rs
src/app/: action.rs  clipboard.rs  mod.rs  state.rs
src/cli/: export.rs  import.rs  init.rs  mod.rs
src/cli/shells/: bash.rs  fish.rs  mod.rs  zsh.rs
src/history/: bash.rs  fish.rs  mod.rs  zsh.rs
src/input/: collection.rs  help.rs  import_export.rs  mod.rs  normal.rs  tag.rs
src/storage/: collections.rs  commands.rs  import_export.rs  migrations.rs  mod.rs  tags.rs
src/ui/: collections.rs  components.rs  history.rs  layout.rs  mod.rs  popups.rs  theme.rs
