[package]
name = "ctrlr"
version = "0.1.3"
edition = "2024"
authors = ["Hermann Berket <ger4ik777@gmail.com>"]

[dependencies]
color-eyre = "0.6.5"
crossterm = { version = "0.29.0", features = ["use-dev-tty"] }
ratatui = "0.30.0"
dirs = "6"
rusqlite = { version = "0.32", features = ["bundled"] }
sha1 = "0.10"
fuzzy-matcher = "0.3"

[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
strip = true
